added form w/ input fields to html

--- a/index.html
+++ b/index.html
@@ -9,5 +9,39 @@
   </head>
   <body>
     <h1>Salary Calculator</h1>
+    <h2>Add Employee</h2>
+    <form id="input-form">
+      <input
+        id="first-name-input"
+        type="text"
+        placeholder="First Name"
+        required
+      />
+      <input
+        id="last-name-input"
+        type="text"
+        placeholder="Last Name"
+        required
+      />
+      <input
+        id="employee-id-input"
+        type="number"
+        placeholder="Employee ID"
+        required
+      />
+      <input
+        id="employee-title-input"
+        type="text"
+        placeholder="Title"
+        required
+      />
+      <input
+        id="annual-salary-input"
+        type="number"
+        placeholder="Annual Salary"
+        required
+      />
+      <input id="submit-employee-info-button" type="submit" value="Submit" />
+    </form>
   </body>
 </html>
