takes in data, needs to push into array

--- a/index.html
+++ b/index.html
@@ -13,35 +13,45 @@
     <form id="input-form">
       <input
         id="first-name-input"
+        name="firstName"
         type="text"
         placeholder="First Name"
         required
       />
       <input
         id="last-name-input"
+        name="lastName"
         type="text"
         placeholder="Last Name"
         required
       />
       <input
         id="employee-id-input"
+        name="employeeId"
         type="number"
         placeholder="Employee ID"
         required
       />
       <input
         id="employee-title-input"
+        name="employeeTitle"
         type="text"
         placeholder="Title"
         required
       />
       <input
         id="annual-salary-input"
+        name="annualSalary"
         type="number"
         placeholder="Annual Salary"
         required
       />
-      <input id="submit-employee-info-button" type="submit" value="Submit" />
+      <input
+        id="submit-employee-info-button"
+        name="submitEmployeeButton"
+        type="submit"
+        value="Submit"
+      />
     </form>
   </body>
 </html>
