form submits the data, does not clear

--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
     <h1>Salary Calculator</h1>
     <h2>Add Employee</h2>
     <form id="input-form">
+      <!-- First Name Input -->
       <input
         id="first-name-input"
         name="firstName"
@@ -18,6 +19,7 @@
         placeholder="First Name"
         required
       />
+      <!-- Last Name Input -->
       <input
         id="last-name-input"
         name="lastName"
@@ -25,6 +27,7 @@
         placeholder="Last Name"
         required
       />
+      <!-- Employee ID Input -->
       <input
         id="employee-id-input"
         name="employeeId"
@@ -32,6 +35,7 @@
         placeholder="Employee ID"
         required
       />
+      <!-- Employee Title Input -->
       <input
         id="employee-title-input"
         name="employeeTitle"
@@ -39,6 +43,7 @@
         placeholder="Title"
         required
       />
+      <!-- Annual Salary Input -->
       <input
         id="annual-salary-input"
         name="annualSalary"
@@ -46,6 +51,7 @@
         placeholder="Annual Salary"
         required
       />
+      <!-- Submit Button -->
       <input
         id="submit-employee-info-button"
         name="submitEmployeeButton"
