--- a/index.html
+++ b/index.html
@@ -92,6 +92,6 @@
         </tr> -->
       </tbody>
     </table>
-    <h3>Total Monthly Cost: $0</h3>
+    <h3>Total Monthly Cost: $<span id="monthly-cost">0</span></h3>
   </body>
 </html>
