no longer allows input if fields are empty

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   <body>
     <h1>Salary Calculator</h1>
     <h2>Add Employee</h2>
-    <form id="input-form">
+    <form name="addEmployeeForm" id="input-form">
       <!-- First Name Input -->
       <input
         id="first-name-input"
@@ -56,7 +56,7 @@
         id="submit-employee-info-button"
         name="submitEmployeeButton"
         type="submit"
-        value="Submit"
+        value="submit"
       />
     </form>
     <!-- Employee Data Display Table -->
