append total cost to red background if over 20k

--- a/index.html
+++ b/index.html
@@ -92,6 +92,8 @@
         </tr> -->
       </tbody>
     </table>
-    <h3>Total Monthly Cost: $<span id="monthly-cost">0</span></h3>
+    <h3 id="monthly-cost-output">
+      Total Monthly Cost: $<span id="monthly-cost-value">0</span>
+    </h3>
   </body>
 </html>
