restyled wrappers to declare styles, gave each form object a grid correspondence

--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
             id="submit-employee-info-button"
             name="submitEmployeeButton"
             type="submit"
-            value="submit"
+            value="Submit"
           />
         </form>
       </div>
