stretch goals complete, styling done

--- a/index.html
+++ b/index.html
@@ -108,9 +108,10 @@
             </tr> -->
           </tbody>
         </table>
-        <button id="restore-table-button">Restore Table</button>
+
         <h3 id="monthly-cost-output">
-          Total Monthly Cost: $<span id="monthly-cost-value">0</span>
+          Total Monthly Cost: $<span id="monthly-cost-value">0</span
+          ><button id="restore-table-button">Restore Table</button>
         </h3>
       </div>
     </div>
