widened warning zone passed dollar sign

--- a/index.html
+++ b/index.html
@@ -110,7 +110,8 @@
         </table>
 
         <h3 id="monthly-cost-output">
-          Total Monthly Cost: $<span id="monthly-cost-value">0</span
+          Total Monthly Cost:
+          <span class="warning">$<span id="monthly-cost-value">0</span></span
           ><button id="restore-table-button">Restore Table</button>
         </h3>
       </div>
